# ForgeAI

./: .env.example  .gitignore  .ignore  CHANGELOG.md  README.md  codegen.js  main.js  package-lock.json  package.json  preload.js  pyproject.toml  requirements-dev.txt  requirements.txt  runner.js
docs/: api-reference.md  architecture.md  forgeai-v1-prd.md  getting-started.md  project-structure.md  troubleshooting.md  usage-examples.md
renderer/: index.html  renderer.js
scripts/: install_mcp.py  test_connection.py
src/: __init__.py
src/core/: config.py  logging_config.py  mcp_server.py
src/mcp_resources/: __init__.py  model_state.py  screenshot.py
src/mcp_tools/: __init__.py  document_tools.py  feature_tools.py  sketch_tools.py
src/solidworks/: __init__.py  connection.py  models.py  operations.py
tests/: __init__.py  conftest.py
tests/unit/: test_document_tools.py  test_feature_tools.py  test_mcp_server.py  test_operations.py  test_resources.py  test_sketch_tools.py
